--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <h1>Ekonomické grafy – nabídka a poptávka</h1>
   <nav>
-    <button id="btn-nabidka" class="tab-btn active">Rostoucí nabídka</button>
-    <button id="btn-poptavka" class="tab-btn">Klesající poptávka</button>
+    <button id="btn-nabidka" class="tab-btn active">Nabídka</button>
+    <button id="btn-poptavka" class="tab-btn">Poptávka</button>
     <button id="btn-trh" class="tab-btn">Propojený trh</button>
   </nav>
   <main>
@@ -20,7 +20,7 @@
       <h2>Nabídka – <span id="nabidka-produkt">Jablka</span></h2>
       <div class="desc">Původní cena: <span id="nabidka-puvodni-cena">15</span> Kč</div>
       <label for="nabidka-cena">Zadejte cenu produktu (Kč):</label>
-      <input type="number" id="nabidka-cena" min="1" max="100" value="15" step="1">
+      <input type="number" id="nabidka-cena" min="0" max="100" value="15" step="1">
       <div id="nabidka-vysledek"></div>
       <canvas id="nabidka-graf" width="600" height="350"></canvas>
     </section>
@@ -29,7 +29,7 @@
       <h2>Poptávka – <span id="poptavka-produkt">Jablka</span></h2>
       <div class="desc">Původní cena: <span id="poptavka-puvodni-cena">15</span> Kč</div>
       <label for="poptavka-cena">Zadejte cenu produktu (Kč):</label>
-      <input type="number" id="poptavka-cena" min="1" max="100" value="15" step="1">
+      <input type="number" id="poptavka-cena" min="0" max="100" value="15" step="1">
       <div id="poptavka-vysledek"></div>
       <canvas id="poptavka-graf" width="600" height="350"></canvas>
     </section>
@@ -38,10 +38,14 @@
       <h2>Trh – <span id="trh-produkt">Jablka</span></h2>
       <div class="desc">Původní cena: <span id="trh-puvodni-cena">15</span> Kč</div>
       <label for="trh-cena">Zadejte cenu produktu (Kč):</label>
-      <input type="number" id="trh-cena" min="1" max="100" value="15" step="1">
+      <input type="number" id="trh-cena" min="0" max="100" value="15" step="1">
       <div id="trh-vysledek"></div>
       <canvas id="trh-graf" width="600" height="350"></canvas>
     </section>
   </main>
 </body>
 </html>
+  </main>
+</body>
+</html>
+
