--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Poptávka -->
     <section id="poptavka-section" class="graph-section" style="display:none">
       <h2>Poptávka – <span id="poptavka-produkt">Jablka</span></h2>
-      <div class="desc">Původní cena: <span id="poptavka-puvodni-cena">15</span> Kč</div>
+      <div class="desc">Původní cena: <span id="poptavka-puvodni_cena">15</span> Kč</div>
       <label for="poptavka-cena">Zadejte cenu produktu (Kč):</label>
       <input type="number" id="poptavka-cena" min="0" max="100" value="15" step="1">
       <div id="poptavka-vysledek"></div>
@@ -36,7 +36,7 @@
     <!-- Propojený trh -->
     <section id="trh-section" class="graph-section" style="display:none">
       <h2>Trh – <span id="trh-produkt">Jablka</span></h2>
-      <div class="desc">Původní cena: <span id="trh-puvodni-cena">15</span> Kč</div>
+      <div class="desc">Původní cena: <span id="trh-puvodni_cena">15</span> Kč</div>
       <label for="trh-cena">Zadejte cenu produktu (Kč):</label>
       <input type="number" id="trh-cena" min="0" max="46" value="15" step="1">
       <div id="trh-vysledek"></div>
@@ -45,8 +45,5 @@
   </main>
 </body>
 </html>
-
-
-
 
 
