--- a/index.html
+++ b/index.html
@@ -2,48 +2,20 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Ekonomické grafy – nabídka a poptávka</title>
+  <title>Grafy trhu</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script defer src="app.js"></script>
+
+  <!-- React + ReactDOM (CDN) -->
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+  <!-- Recharts (CDN) -->
+  <script src="https://unpkg.com/recharts/umd/Recharts.js"></script>
 </head>
 <body>
-  <h1>Ekonomické grafy – nabídka a poptávka</h1>
-  <nav>
-    <button id="btn-nabidka" class="tab-btn active">Nabídka</button>
-    <button id="btn-poptavka" class="tab-btn">Poptávka</button>
-    <button id="btn-trh" class="tab-btn">Propojený trh</button>
-  </nav>
-  <main>
-    <!-- Nabídka -->
-    <section id="nabidka-section" class="graph-section">
-      <h2>Nabídka – <span id="nabidka-produkt">Jablka</span></h2>
-      <div class="desc">Původní cena: <span id="nabidka-puvodni-cena">15</span> Kč</div>
-      <label for="nabidka-cena">Zadejte cenu produktu (Kč):</label>
-      <input type="number" id="nabidka-cena" min="0" max="100" value="15" step="1">
-      <div id="nabidka-vysledek"></div>
-      <canvas id="nabidka-graf" width="600" height="350"></canvas>
-    </section>
-    <!-- Poptávka -->
-    <section id="poptavka-section" class="graph-section" style="display:none">
-      <h2>Poptávka – <span id="poptavka-produkt">Jablka</span></h2>
-      <div class="desc">Původní cena: <span id="poptavka-puvodni_cena">15</span> Kč</div>
-      <label for="poptavka-cena">Zadejte cenu produktu (Kč):</label>
-      <input type="number" id="poptavka-cena" min="0" max="100" value="15" step="1">
-      <div id="poptavka-vysledek"></div>
-      <canvas id="poptavka-graf" width="600" height="350"></canvas>
-    </section>
-    <!-- Propojený trh -->
-    <section id="trh-section" class="graph-section" style="display:none">
-      <h2>Trh – <span id="trh-produkt">Jablka</span></h2>
-      <div class="desc">Původní cena: <span id="trh-puvodni_cena">15</span> Kč</div>
-      <label for="trh-cena">Zadejte cenu produktu (Kč):</label>
-      <input type="number" id="trh-cena" min="0" max="46" value="15" step="1">
-      <div id="trh-vysledek"></div>
-      <canvas id="trh-graf" width="600" height="350"></canvas>
-    </section>
-  </main>
+  <div id="root"></div>
+
+  <!-- Tvoje aplikace -->
+  <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
-
-
